update index.html and css file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="card-container">
+    <main class="card-container">
       <div class="card">
         <img
           src="images/illustration-hero.svg"
@@ -33,7 +33,7 @@
             <div class="annual-plan">
               <img src="images/icon-music.svg" alt="" />
               <div class="annual-plan-container">
-                <h3 class="plan-title">Annual Plan</h3>
+                <h2 class="plan-title">Annual Plan</h2>
                 <p class="plan-price">$59.99/year</p>
               </div>
             </div>
@@ -43,7 +43,7 @@
           <button class="btn cancel-order-button">Cancel Order</button>
         </div>
       </div>
-    </div>
+    </main>
 
     <!-- <div class="attribution">
       Challenge by
